...

                <EditText
                    android:id="@+id/nombre_refugiado"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
...

                <EditText
                    android:id="@+id/email_refugiado"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
...

                <EditText
                    android:id="@+id/password_refugiado"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
...

                <EditText
                    android:id="@+id/rpassword_refugiado"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
...

                <EditText
                    android:id="@+id/p_apellido_refugiado"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
...

                <EditText
                    android:id="@+id/s_apellido_refugiado"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
...

                <EditText
                    android:id="@+id/telefono_refugiado"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
...

            <Spinner
                android:id="@+id/sexo_refugiado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/procedencia_refugiado"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
...

                <EditText
                    android:id="@+id/pueblo_refugiado"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
...

                <EditText
                    android:id="@+id/etnia_refugiado"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
...

            <Spinner
                android:id="@+id/grupo_sanguineo_refugiado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/ojos_refugiado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
