...
        android:gravity="center_horizontal"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/boton_refugiado"
            android:text="@string/refugee" />

        <Space style="@style/espacio"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/boton_voluntario"
            android:text="@string/volunteer" />



    </LinearLayout>

...
